--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-      
+        <h1 class="title">The Clansman</h1>
+        <h3 class="subtitle"><i>by Iron Maiden</i></h3>
             
         </div>
     </body>
