--- a/index.html
+++ b/index.html
@@ -7,7 +7,87 @@
     <body>
         <h1 class="title">The Clansman</h1>
         <h3 class="subtitle"><i>by Iron Maiden</i></h3>
-            
+        <div class="text">
+            <p>Wake alone in the hills
+                With the wind in your face
+                It feels good to be proud
+                And be free and a race that is part of a clan
+                To live on highlands
+                With the air that you breathe
+                So pure and so clean
+            </p>
+            <p>When alone on the hills
+                With the wind in your hair
+                With a longing to feel
+                Just to be free
+            </p>
+            <p>Is it right to believe
+                In the need to be free
+                It's a time when you die
+                And without asking why
+                Can't you see what they do
+                They are grinding us down
+                They are taking our land
+                That belongs to the clans0
+            </p>
+            <p>Not alone with a dream
+                Just a want to be free
+                With a need to belong
+                I am a clansman
+            </p>
+            <p>Freedom
+                Freedom
+                Freedom
+                Freedom
+            </p>
+            <p>It's a time wrought with fear
+                It's a land wrought with change
+                Ancestors could hear what is happening now
+                They would turn in their graves
+                They would all be ashamed
+                That the land of the free has written in chains
+            </p>
+            <p>And I know what I want
+                When the timing is right
+                Then I'll take what is mine
+                I am the clansman
+            </p>
+            <p>And I swear to defend
+                I will fight to the end
+                And I swear that I'll never be taken alive
+                And I know that we'll stand
+                We'll fight for a land
+                And I swear that my bairns
+                Will be born free
+            </p>
+            <p>And I know what I want
+                When the timing is right
+                Then I'll take what I want
+                I am the clansman
+            </p>
+            <p>No, no we can't let them take anymore
+                No we can't let them take anymore
+                We're the land of the free
+            </p>
+            <p>Is it right to believe
+                In the need to be free
+                It's a time when you die
+                And without asking why
+                Can't you see what they do
+                They are grinding us down
+                They are taking our land
+                That belongs to the clans
+            </p>
+            <p>Not alone with a dream
+                Just a want to be free
+                With a need to belong
+                I am a clansman
+            </p>
+            <p>And I know what I want
+                When the timing is right
+                Then I'll take what is mine
+                I am the clansman
+            </p>
         </div>
     </body>
 
