--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 So pure and so clean
             </p>
             <p>When alone on the hills
+                >ADDITIONAL TEXT 2<
                 With the wind in your hair
                 With a longing to feel
                 Just to be free
@@ -26,6 +27,7 @@
                 In the need to be free
                 It's a time when you die
                 And without asking why
+                >ADDITIONAL TEXT 3<
                 Can't you see what they do
                 They are grinding us down
                 They are taking our land
